| Bug #19479 | mysqldump creates invalid dump | ||
|---|---|---|---|
| Submitted: | 2 May 2006 13:40 | Modified: | 23 Jul 2006 3:41 |
| Reporter: | Dmitry Bakhvalov | Email Updates: | |
| Status: | Closed | ||
| Category: | Client | Severity: | S3 (Non-critical) |
| Version: | mysql 5.0.18/5.0BK/4.1BK | OS: | Linux (linux 2.6.11.4-20a-smp) |
| Assigned to: | Iggy Galarza | Target Version: | |
[2 May 2006 13:40]
Dmitry Bakhvalov
[2 May 2006 14:08]
Miguel Solorzano
Thank you for the bug report. -- ------------------------------------------------------ -- Server version 4.1.19-debug-log <cut> -- -- Table structure for table `about:text` -- DROP TABLE IF EXISTS `about:text`; CREATE TABLE `text` ( `_id` int(11) NOT NULL auto_increment, -- ------------------------------------------------------ -- Server version 5.0.22-debug /*!40101 SET @OLD_CHARACTER_SET_CLIENT=@@CHARACTER_SET_CLIENT */; <cut> -- -- Table structure for table `about:text` -- DROP TABLE IF EXISTS `about:text`; CREATE TABLE `text` ( `_id` int(11) NOT NULL auto_increment, -- ------------------------------------------------------ -- Server version 5.1.10-beta-debug /*!40101 SET @OLD_CHARACTER_SET_CLIENT=@@CHARACTER_SET_CLIENT */; <cut> -- -- Table structure for table `about:text` -- DROP TABLE IF EXISTS `about:text`; CREATE TABLE `about:text` ( `_id` int(11) NOT NULL AUTO_INCREMENT,
[4 Jun 2006 18:29]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/7252
[23 Jul 2006 3:35]
Paul DuBois
Noted in 5.0.23 changelog. mysqldump did not dump the table name correctly for some table identifiers that contained unusual characters such as `:'.
